crates/uselesskey-interop-tests/tests/snapshots/cross_adapter_roundtrip__jwk_roundtrip__ecdsa_p256_jwk_structure.snap
---
source: crates/uselesskey-interop-tests/tests/cross_adapter_roundtrip.rs
assertion_line: 565
expression: redacted
---
alg: ES256
crv: P-256
kid: "[REDACTED]"
kty: EC
use: sig
x: "[REDACTED]"
y: "[REDACTED]"
