crates/uselesskey-interop-tests/tests/snapshots/cross_adapter_roundtrip__jwk_roundtrip__ed25519_jwk_structure.snap
---
source: crates/uselesskey-interop-tests/tests/cross_adapter_roundtrip.rs
assertion_line: 586
expression: redacted
---
alg: EdDSA
crv: Ed25519
kid: "[REDACTED]"
kty: OKP
use: sig
x: "[REDACTED]"
