crates/uselesskey-interop-tests/tests/snapshots/cross_adapter_roundtrip__jwk_roundtrip__rsa_jwk_structure.snap
---
source: crates/uselesskey-interop-tests/tests/cross_adapter_roundtrip.rs
assertion_line: 544
expression: redacted
---
alg: RS256
e: "[REDACTED]"
kid: "[REDACTED]"
kty: RSA
n: "[REDACTED]"
use: sig
